--- a/src/app.css
+++ b/src/app.css
@@ -13,4 +13,8 @@ body {
 	margin: 0;
 	height: 100%;
 	background-color: #d8f983;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-block-start: 20%;
 }
