--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -1,5 +1,6 @@
 .card {
-	max-width: 200px;
+	max-width: 90%;
+	margin-inline-start: 5%;
 	padding: 1rem;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	border-radius: 14px;
