--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -1,4 +1,7 @@
 .card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	max-width: 90%;
 	margin-inline-start: 5%;
 	padding: 1rem;
