--- a/src/components/Answers.module.css
+++ b/src/components/Answers.module.css
@@ -1,7 +1,8 @@
 .btn {
 	text-align: center;
+	font-size: 1.25rem;
 	margin-block-end: 1em;
-	padding: 4px;
+	padding: 12px;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	border-radius: 8px;
 	min-width: 30%;
@@ -10,4 +11,17 @@
 
 .btn:hover {
 	background-color: rgb(239, 234, 234);
+}
+.correct,
+.correct:hover {
+	background-color: #50fa83;
+}
+
+.incorrect,
+.incorrect:hover {
+	background-color: #f95a5a;
+}
+
+.clicked {
+	border: 2px solid black;
 }
