--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	max-width: 90%;
 	margin-inline-start: 5%;
+	margin-block-end: 6px;
 	padding: 1rem;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	border-radius: 14px;
